# git-explore

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md
mockup/: git-explore-ui.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: batch.rs  config.rs  fs.rs  git.rs  mod.rs  size_scan.rs  workspace.rs
src-tauri/src/domain/: batch_ops_manager.rs  git_detector.rs  git_service.rs  mod.rs  status_aggregator.rs  workspace_manager.rs
src-tauri/src/infra/: config.rs  credential.rs  error.rs  fs_watcher.rs  git2_adapter.rs  mod.rs
src/components/: AddressBar.tsx  BatchActionBar.tsx  BatchProgressPanel.tsx  BranchSwitchDialog.tsx  CloneDialog.tsx  CommitDialog.tsx  DiffDialog.tsx  FileList.tsx  FileTree.tsx  LanguageSwitcher.tsx  MenuBar.tsx  SettingsDialog.tsx  StatusBar.tsx  TitleBar.tsx  ToolBar.tsx  icons.tsx
src/hooks/: useAppInit.ts
src/i18n/: index.ts
src/ipc/: index.ts
src/locales/en/: addressbar.json  batch.json  branch.json  clone.json  commit.json  common.json  diff.json  errors.json  filelist.json  filetree.json  git.json  gitops.json  menu.json  settings.json  statusbar.json  toolbar.json
src/locales/zh-CN/: addressbar.json  batch.json  branch.json  clone.json  commit.json  common.json  diff.json  errors.json  filelist.json  filetree.json  git.json  gitops.json  (+4 more)
src/stores/: index.ts
src/styles/: global.css
src/types/: index.ts
