[package]
name = "git-explore"
version = "0.1.0"
description = "多 Git 仓库桌面管理工具"
authors = ["GitExplore"]
edition = "2021"

[lib]
name = "git_explore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Git 引擎
git2 = "0.19"
# 文件系统监听
notify = "7"
notify-debouncer-full = "0.4"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 错误处理
thiserror = "2"
# 路径遍历
walkdir = "2"
# 凭证存储
keyring = "3"
# 配置
dirs = "5"
# 批次 ID
uuid = { version = "1", features = ["v4"] }

# Windows API（磁盘枚举）
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_System_WindowsProgramming"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
